fixed contrast errors

--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ footer h3 {
 
 /* form settings */
 form label {
-  display: flex;
+  display: block;
   font-size: 18px;
   margin-bottom: 5px;
   color: white;
@@ -152,14 +152,13 @@ form label {
 }
 
 form input[type="text"] {
-  color: #fff;
-  font-size: 18px;
-  width: 98%;
+  color: #000;
+  font-size: 22px;
   margin-bottom: 20px;
 }
 
 form textarea {
-  color: #fff;
+  color: #000;
   font-size: 18px;
   margin-bottom: 20px;
   width: 98%;
@@ -169,18 +168,25 @@ form textarea {
 form button {
   padding: 10px 16px;
   background-color: #000;
+  color: white;
+  border: 0;
   border-radius: 10px;
   font-family: tahoma;
 }
 
 legend {
-  background-color: #fff;
+  background-color: #000;
+  color: white;
   padding: 3px 6px;
+  border-radius: 6px;
 }
 
 fieldset {
   max-width: 600px;
-  border-radius: 15px;
+  min-width: 250px;
+  padding: 10px 12px;
+  border-radius: 6px;
+  border-style: groove;
 }
 
 /* this makes the google map responsive */
